Additional fixes based on findbugs report.