@@ -68,16 +68,16 @@ public class WebAssertionsTest extends JWebUnitAPITestCase {
 
 	public void testAssertLinkPresentWithTextN() throws Throwable {
 		assertPass("assertLinkPresentWithText", new Object[] { "test link",
-				new Integer(0) });
+				Integer.valueOf(0) });
 		assertFail("assertLinkPresentWithText", new Object[] { "test link",
-				new Integer(1) });
+				Integer.valueOf(1) });
 	}
 
 	public void testAssertLinkNotPresentWithTextN() throws Throwable {
 		assertPass("assertLinkNotPresentWithText", new Object[] { "test link",
 				new Integer(1) });
 		assertFail("assertLinkNotPresentWithText", new Object[] { "test link",
-				new Integer(0) });
+				Integer.valueOf(0) });
 	}
 
 	public void testAssertLinkPresent() throws Throwable {
